# heatitup

./: README.org  find-duplication.cabal  heatitup.cabal  stack.yaml
app/: Main.hs
src/: Classify.hs  Diffusion.hs  Load.hs  Plot.hs  Print.hs  Repeated.hs  Spacer.hs  Types.hs  Utility.hs
