name:                find-duplication
version:             0.4.1.0
synopsis:            Find duplications in a sequence
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/find-duplication#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          example@example.com
copyright:           2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utility
                     , Load
                     , Repeated
                     , Diffusion
                     , Spacer
                     , Classify
                     , Plot
                     , Print
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , suffixtree
                     , bytestring
                     , lens
                     , stringsearch
                     , safe
                     , string-similarity
                     , diagrams-lib
                     , colour
                     , fasta
                     , bytestring-show
                     , pipes
                     , pipes-csv
                     , pipes-bytestring
                     , cassava
                     , edit-distance
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

executable find-duplication
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , find-duplication
                     , optparse-applicative
                     , fasta
                     , pipes
                     , pipes-bytestring
                     , bytestring
                     , diagrams-pgf
                     , diagrams-lib
                     , pipes-csv
                     , vector
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/find-duplication
