name:                find-duplication
version:             0.5.2.0
synopsis:            Find duplications in a sequence
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/find-duplication#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gsch@mail.med.upenn.edu
copyright:           2017 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utility
                     , Load
                     , Repeated
                     , Diffusion
                     , Spacer
                     , Classify
                     , Plot
                     , Print
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , bytestring-show
                     , cassava
                     , colour
                     , containers
                     , diagrams-lib
                     , edit-distance
                     , fasta
                     , lens
                     , pipes
                     , pipes-bytestring
                     , pipes-csv
                     , safe
                     , string-similarity
                     , stringsearch
                     , suffixtree
                     , vector
  ghc-options:         -O2
  default-language:    Haskell2010

executable find-duplication
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , find-duplication
                     , bytestring
                     , containers
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-pgf
                     , diagrams-svg
                     , diagrams-html5
                     , diagrams-rasterific
                     , fasta
                     , lens
                     , optparse-applicative
                     , pipes
                     , pipes-bytestring
                     , pipes-csv
                     , safe
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/find-duplication
